Fixed: Remove vertical centering in layout for consistent top alignment

--- a/src/style.css
+++ b/src/style.css
@@ -96,8 +96,6 @@ body {
 }
 
 .container > div {
-	margin-top: auto;
-	margin-bottom: auto;
 	width: 100%;
 }
 
